--- a/app/src/main/res/layout/activity_insertar_registro.xml
+++ b/app/src/main/res/layout/activity_insertar_registro.xml
@@ -34,8 +34,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="Apellido"
-            android:inputType="textPersonName"
-            android:text="Apellido" />
+            android:inputType="textPersonName" />
 
         <EditText
             android:id="@+id/tipo"
@@ -92,5 +91,15 @@
             android:ems="10"
             android:hint="Ubicacion"
             android:inputType="textPersonName" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="15dp" />
+
+        <Button
+            android:id="@+id/btn_registrar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Registrar" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
