--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,11 +29,9 @@
                 android:id="@+id/imagechakuy"
                 android:layout_width="197dp"
                 android:layout_height="177dp"
-                android:layout_marginStart="100dp"
-                android:layout_marginEnd="40dp"
+                android:layout_gravity="center"
                 android:scaleType="fitCenter"
                 app:srcCompat="@mipmap/ic_chakuy" />
-
             <Space
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
@@ -56,8 +54,10 @@
 
             <Button
                 android:id="@+id/btn_login"
-                android:layout_width="match_parent"
+                android:layout_width="170dp"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
                 android:text="Iniciar Sesion" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
