--- a/app/src/main/res/layout/viewmtp_single.xml
+++ b/app/src/main/res/layout/viewmtp_single.xml
@@ -37,6 +37,14 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/textView11"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Fecha:"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <TextView
                 android:id="@+id/fecha"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
