--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,12 @@
             android:text="LISTADO" />
 
         <Button
+            android:id="@+id/btn_descargar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Descargar Listado" />
+
+        <Button
             android:id="@+id/btn_cerrar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
