--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/wallpapers_4k_android"
     tools:context=".login">
 
     <androidx.cardview.widget.CardView
@@ -48,6 +49,7 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:hint="Correo"
+                android:textSize="30dp"
                 android:inputType="textPersonName" />
 
             <EditText
@@ -56,6 +58,7 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:hint="Password"
+                android:textSize="30dp"
                 android:inputType="textPassword" />
 
             <Button
