--- a/app/src/main/res/layout/activity_minicio2.xml
+++ b/app/src/main/res/layout/activity_minicio2.xml
@@ -32,14 +32,14 @@
             </TextView>
 
             <TextView
-                android:layout_marginTop="6dp"
-                android:layout_below="@id/txtmenu"
                 android:id="@+id/txtitem"
-                android:text="4 Items"
-                android:textSize="18sp"
-                android:textColor="#FFFFFF"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_below="@id/txtmenu"
+                android:layout_marginTop="6dp"
+                android:text="5 Items"
+                android:textColor="#FFFFFF"
+                android:textSize="18sp">
 
             </TextView>
 
@@ -224,6 +224,45 @@ android:layout_marginTop="80dp"
 
             </androidx.cardview.widget.CardView>
 
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_columnWeight="1"
+            app:cardElevation="6dp"
+            app:cardCornerRadius="12dp"
+            android:layout_margin="12dp" >
+
+            <LinearLayout
+                android:id="@+id/mapa"
+                android:padding="16dp"
+                android:orientation="vertical"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                >
+                <ImageView
+                    android:src="@drawable/mapa"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"/>
+
+                <TextView
+                    android:layout_marginTop="12dp"
+                    android:textColor="@color/black"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:text="Mapa"
+
+                    >
+
+
+                </TextView>
+
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
 
         </GridLayout>
 
