--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,10 +27,10 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/txtversion"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="4.0" />
+                android:text="5.0.3" />
 
             <ImageView
                 android:id="@+id/imagechakuy"
