--- a/app/src/main/res/layout/activity_minicio2.xml
+++ b/app/src/main/res/layout/activity_minicio2.xml
@@ -44,6 +44,14 @@
             </TextView>
 
 
+            <TextView
+                android:id="@+id/txtregistros"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/txtitem"
+                android:text="Cantidad Registros"
+                android:textColor="#F8F3F3" />
+
             <ImageView
                 android:layout_alignParentRight="true"
                 android:src="@drawable/logocha"
