--- a/app/src/main/res/layout/viewmtp_single.xml
+++ b/app/src/main/res/layout/viewmtp_single.xml
@@ -166,7 +166,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Pedido:"
+                    android:text="Telefono:"
                     android:textSize="16sp"
                     android:textStyle="bold" />
 
